--- a/templates/home.html
+++ b/templates/home.html
@@ -23,10 +23,28 @@
               </div>
             </div>
             <div id="stats_display">
-              <div id="stat_box1">Stat 1</div>
-              <div id="stat_box2">Stat 2</div>
-              <div id="stat_box3">Stat 3</div>
-              <div id="stat_box4">Stat 4</div>
+
+              <div id="stat_box1" class="mdc-card">
+                <section class="mdc-card__media recent_activity_header" style="height: 8px">
+                 <div style="font-weight: 800; font-size: 12px;">Response Rate</div>
+                </section>
+                <div class="inner-stat-circle">
+                </div>
+              </div>
+              <div id="stat_box2" class="mdc-card">
+                <section class="mdc-card__media recent_activity_header" style="height: 8px">
+                 <div style="font-weight: 800; font-size: 12px;">Questions Asked</div>
+                </section>
+                <div class="inner-stat-circle">
+                </div>
+              </div>
+              <div id="stat_box3" class="mdc-card">
+                <section class="mdc-card__media recent_activity_header" style="height: 8px">
+                 <div style="font-weight: 800; font-size: 12px;">Questions Answered</div>
+                </section>
+                <div class="inner-stat-circle">
+                </div>
+              </div>
             </div>
         </div>
         <div class="mdc-layout-grid__cell--align-right mdc-layout-grid__cell--span-4"> 
