--- a/templates/app.html
+++ b/templates/app.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="../material-components-web/dist/material-components-web.css">
 	<link rel="stylesheet" type = "text/css" href="../css/index.css">
 	<link rel="stylesheet" type="text/css" href="../css/home.css">
+	<link rel="stylesheet" type="text/css" href="../css/questions.css">
 	<link rel="stylesheet" type = "text/css" href="../css/loaders.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	
