--- a/templates/questions.html
+++ b/templates/questions.html
@@ -1,4 +1,12 @@
 <div id="question_body">
-	<h1>Questions</h1>
+	<nav id="basic-tab-bar" class="mdc-tab-bar mdc-tab-bar-upgraded tab-nav">
+	    <a class="mdc-tab mdc-ripple-upgraded mdc-tab--active" id="questions-tab" href="#one" >Questions</a>
+	    <a class="mdc-tab mdc-ripple-upgraded" id="responded-tab" href="#two" >Responded To</a>
+	    <span class="mdc-tab-bar__indicator" style="transform: translateX(0px) scale(0.5, 1); visibility: visible;"></span>
+	 </nav>
+
+	 <div id="question-content" style="padding-top: 10%;">
+	 	
+	 </div>
 </div>
 <script src="../js/questions.js"></script> 
