added search feature

--- a/templates/questions.html
+++ b/templates/questions.html
@@ -2,11 +2,15 @@
 	<nav id="basic-tab-bar" class="mdc-tab-bar mdc-tab-bar-upgraded tab-nav">
 	    <a class="mdc-tab mdc-ripple-upgraded mdc-tab--active" id="questions-tab" href="#one" >Questions</a>
 	    <a class="mdc-tab mdc-ripple-upgraded" id="responded-tab" href="#two" >Responded To</a>
+
 	    <span class="mdc-tab-bar__indicator" style="transform: translateX(0px) scale(0.5, 1); visibility: visible;"></span>
 	 </nav>
+	  <div class="filter-bar">
+	 	<div><input type="text" id="search-bar" placeholder="Search for Questions"><i class="material-icons" style="position:absolute;margin-left: -2.4%;margin-top: .7%;">search</i></div>
+	 	
+	  </div>
 
 	 <div id="question-content" style="padding-top: 10%;">
-	 	
 	 </div>
 </div>
 <script src="../js/questions.js"></script> 
