--- a/css/questions.css
+++ b/css/questions.css
@@ -18,13 +18,16 @@
 	border:none;
 	box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 	border-radius: 10px;
-	-webkit-transition: width 2s;
-    transition: width 2s;
+    -webkit-transition: all .2s ease-out;
+    -moz-transition: all .2s ease-out;
+    -ms-transition: all .2s ease-out;
+    -o-transition: all .2s ease-out;
+    transition: all .2s ease-out
 }
 
 
 #search-bar:focus{
-	width: 40%;
 	margin-left: 26%;
 	border: 1px solid #3f51b5;
+    width: 40%;
 }
