--- a/css/questions.css
+++ b/css/questions.css
@@ -4,11 +4,14 @@
 	box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 	position: fixed;
 	margin-top: 4%;
+	z-index: 1;
+	background-color: white;
 }
 .tab-nav {
 	position: fixed;
 	margin:auto;
     margin-left: 27%;
+    z-index: 1;
 }
 #search-bar {
 	margin-top: .5%;
