--- a/templates/questions.html
+++ b/templates/questions.html
@@ -12,5 +12,18 @@
 
 	 <div id="question-content" style="padding-top: 10%;">
 	 </div>
+	  <aside class="mdc-dialog" id="answer-dialog">
+          <div class="mdc-dialog__surface">
+            <header class="mdc-dialog__header">
+              <h2 id="question-title" class="mdc-dialog__header__title">
+                
+              </h2>
+            </header>
+            <form id="answer-form">
+            <section id="answer-footer" class="mdc-dialog__body">
+            </section>
+       		 </form>
+          </div>
+     </aside>
 </div>
 <script src="../js/questions.js"></script> 
