--- a/css/questions.css
+++ b/css/questions.css
@@ -7,6 +7,46 @@
 	z-index: 1;
 	background-color: white;
 }
+
+.country-banner {
+	position: absolute;
+	width: 50px;
+	height: 80px;
+	margin-left: 67.4%;
+	margin-bottom: 6%;
+	background-color: whitesmoke;
+	box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+
+}
+
+.banner-flag {
+	margin-top: 50% !important;
+	width:100%;
+	height: 34%;
+	margin:auto;
+	background-size: 100%;
+	transform: rotate(90deg);
+	box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+}
+
+.country-banner::after {
+  	content: '';
+  	position: absolute;
+  	z-index: -1;
+	width: 20px;
+	height: 20px;
+	background-color: gainsboro;
+	top:5%;
+	margin-left: 80%;
+ 	transform: rotate(-45deg);
+}
+
+.question-card {
+	width:90%;
+	margin: auto;
+	margin-top: 2%;
+}
+
 .tab-nav {
 	position: fixed;
 	margin:auto;
