--- a/templates/questions.html
+++ b/templates/questions.html
@@ -11,10 +11,13 @@
 	  </div>
 
 	 <div id="question-content" style="padding-top: 10%;">
+	 	
 	 </div>
 	  <aside class="mdc-dialog" id="answer-dialog">
           <div class="mdc-dialog__surface">
             <header class="mdc-dialog__header">
+            <button type="button" class="mdc-button mdc-dialog__footer__button mdc-dialog__footer__button--cancel" style="float:right">Cancel</button>
+
               <h2 id="question-title" class="mdc-dialog__header__title">
                 
               </h2>
