created loading icon for just questions

--- a/templates/questions.html
+++ b/templates/questions.html
@@ -9,9 +9,12 @@
 	 	<div><input type="text" id="search-bar" placeholder="Search for Questions"><i class="material-icons" style="position:absolute;margin-left: -2.4%;margin-top: .7%;">search</i></div>
 	 	
 	  </div>
-
-	 <div id="question-content" style="padding-top: 10%;">
+	 	<div id="questions-overlay">
+      		<div class="questions-loading"></div>
+		</div>
 	 	
+	 <div id="question-content" style="padding-top: 10%;">
+
 	 </div>
 	  <aside class="mdc-dialog" id="answer-dialog">
           <div class="mdc-dialog__surface">
