--- a/css/loaders.css
+++ b/css/loaders.css
@@ -30,3 +30,27 @@
     z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
     cursor: pointer; /* Add a pointer on hover */
 }
+
+.questions-loading {
+  border-radius: 50%;
+  width: 8%;
+  height: 16%;
+  margin-top: 20%;
+  margin-left: 53%;
+  border: .5rem solid rgba(255, 255, 255, 0.2);
+  border-top-color: #3366FF;
+  animation: spin .7s infinite linear;
+}
+
+#questions-overlay {
+    position: fixed; /* Sit on top of the page content */
+    display: none; /* Hidden by default */
+    width: 100%; /* Full width (cover the whole page) */
+    height: 100%; /* Full height (cover the whole page) */
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+    cursor: pointer; /* Add a pointer on hover */
+}
