filter all questions and my questions

--- a/templates/questions.html
+++ b/templates/questions.html
@@ -1,7 +1,7 @@
 <div id="question_body">
 	<nav id="basic-tab-bar" class="mdc-tab-bar mdc-tab-bar-upgraded tab-nav">
-	    <a class="mdc-tab mdc-ripple-upgraded mdc-tab--active" id="questions-tab" >Questions</a>
-	    <a class="mdc-tab mdc-ripple-upgraded" id="responded-tab" >Responded To</a>
+	    <a class="mdc-tab mdc-ripple-upgraded mdc-tab--active" id="questions-tab" active= true>All Questions</a>
+	    <a class="mdc-tab mdc-ripple-upgraded" id="my-tab" active = false >My Questions</a>
 
 	    <span class="mdc-tab-bar__indicator" style="transform: translateX(0px) scale(0.5, 1); visibility: visible;"></span>
 	 </nav>
