--- a/templates/questions.html
+++ b/templates/questions.html
@@ -44,7 +44,7 @@
 	            <br>
 	            <div class="mdc-form-field">
 	              <div class="mdc-checkbox">
-	                <input id="gender-other" class="mdc-checkbox__native-control" type="checkbox">
+	                <input id="other" class="mdc-checkbox__native-control" type="checkbox">
 	                <div class="mdc-checkbox__background">
 	                  <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
 	                    <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -124,7 +124,7 @@
 	            <br>
 	            <div class="mdc-form-field">
 	              <div class="mdc-checkbox">
-	                <input id="race-other" class="mdc-checkbox__native-control" type="checkbox">
+	                <input id="other" class="mdc-checkbox__native-control" type="checkbox">
 	                <div class="mdc-checkbox__background">
 	                  <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
 	                    <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
@@ -217,7 +217,7 @@
 	            <br>
 	            <div class="mdc-form-field">
 	              <div class="mdc-checkbox">
-	                <input id="religion-other" class="mdc-checkbox__native-control" type="checkbox">
+	                <input id="other" class="mdc-checkbox__native-control" type="checkbox">
 	                <div class="mdc-checkbox__background">
 	                  <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
 	                    <path class="mdc-checkbox__checkmark__path" fill="none" stroke="white" d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
